# Speech_Recognition_Translator

./: .gitignore  .markdownlint.json  .markdownlintignore  BUILD_VERIFICATION.md  CMakeLists.txt  COMPLETION_SUMMARY.md  DOCS_MARKDOWN_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  MULTILINGUAL_SUPPORT.md  QUICKSTART.md  README.md  SD_INTEGRATION.md  SETUP_GUIDE.md  generate_dicts.py  sd_driver.c  speech_recognition_translator.c
microsd/: PhonemeList.txt  TrainingWords_English.txt  UserList.txt
tools/: generate_training_words.ps1
